# bubble

./: .cursorrules  .envrc  .gitignore  .prettierrc  Dockerfile  JOURNAL.md  Makefile  Procfile  README.md  audio_packets.db  bubble.py  capabilities.py  config.ttl  deepgram-input.json  deno.json  docker-compose.yml  fly-nats.toml  fly.toml  foo.rq  ground-facts.ttl  main.ts  main_test.ts  n3.py  n3test.ts  package-lock.json  package.json  pyproject.toml  server.ts  tailwind.config.js  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
bubble/: __init__.py  bash.py  boot.py  bubbleboot.py  bubblerepo.py  capabilities.py  caps.py  chat.py  cred.py  eyereason.py  gensym.py  graphvar.py  html.py  http.py  id.py  json.py  jsonrdf.py  mac.py  macs.py  main.py  mind.py  mint.py  n3.py  n3_utils.py  ns.py  prfx.py  rdfa.py  rdfjson.py  rdfutil.py  repo.py  slop.py  stat.py  sysinfo.py  test_jsonrdf.py  util.py  vars.py  wikidata.py
bubble/rule/: core.n3
bubble/rules/: api.n3  core.n3  step.n3
bubble/static/: type-writer.js  voice-writer.js
bubble/static/css/: input.css  output.css
bubble/telegram/: __main__.py  bots.py
bubble/test/: conftest.py  test_caps.py  test_cred.py  test_disk.py  test_html.py  test_json.py  test_macs.py  test_mint.py  test_repo.py  test_slop.py  test_stat.py  test_util.py  test_vars.py
bubble/tests/: test_capabilities.py  test_caps.py  test_gensym.py  test_id.py  test_json.py  test_jsonrdf.py  test_macs.py  test_mind.py  test_n3.py  test_n3_processing.py  test_repo.py  test_slop.py  test_stat.py  test_sysinfo.py  test_util.py  test_vars.py
notes/Node.Town/: 2023-12-30.md  2024-12-18.md  ActivityPub.md  Actor Identity.md  Architectural Styles and the Design of Network-based Software Architectures.md  Authentication as an Event.md  Capability-Based Participation.md  First 2025 Note.md  OrbStack.md  The Concept of a User.md  User Identity.md  Xmas 2024 Disability Adventure.md  swa.sh.md
nt/src/swash/: util.py  vars.py
play/: Makefile  inbox.n3  inbox.out.1.n3  inbox.out.2.n3  inbox.out.n3
rules/: html.n3  inbox.n3  transitive.n3  type-inference.n3
shapes/: FoafProfile.shex
src/: handleWithRules.ts  html.ts  html_test.ts  namespace.ts  rdfUtils.ts  reasoning.ts  reasoning_test.ts  request.ts  requestToStore.ts  request_test.ts  responseUtils.ts  rules.ts  rules_test.ts  server_test.ts  utils.ts
src/bubble/: DeepgramTranscriptionReceiver.py  OggWriter.py  Vat.py  __init__.py  __main__.py  base_html.py  bits.py  blob.py  boot.py  capn.py  capo.py  caps.py  cert.py  chat.py  connect.py  cred.py  data.py  deepgram.py  disk.py  html.py  http.py  icon.py  join.py  json.py  keys.py  logs.py  macs.py  main.py  mesh.py  mind.py  mint.py  oggw.py  opus.py  page.py  peer.py  pill.py  prfx.py  rdfa.py  repo.py  slop.py  (+11 more)
src/bubble/apis/: recraft.py  replicate.py
src/bubble/audio/: whisper.py
src/bubble/cli/: __init__.py  app.py  info.py  init.py  join.py  serve.py  shell.py  tool.py  town.py
src/bubble/deepgram/: __init__.py  json.py  talk.py  test_talk.py
src/bubble/http/: __init__.py  cert.py  eval.py  node.py  page.py  pill.py  render.py  sort.py  tool.py  tools.py  town.py  word.py
src/bubble/http/static/: audio-player.css  audio-player.js  live.js  voice-recorder-writer.js  voice-writer.js
src/bubble/http/static/css/: input.css  output.css
src/bubble/mesh/: __init__.py  base.py  call.py  mesh.py  nats.py  otp.py  vat.py
src/bubble/replicate/: make.py
src/bubble/repo/: __init__.py  git.py  repo.py
src/bubble/sock/: join.py  peer.py
src/bubble/stat/: __init__.py  disk.py  stat.py
src/bubble/static/: audio-recorder.js  jsonld-socket.js  voice-recorder-writer.js  voice-writer.js
src/bubble/static/css/: output.css
src/bubble/telegram/: __init__.py  bots.py
src/bubble/tool/: bash.py  chat2024.py  genimg.py  genvid.py  note.py  putimg.py  sheet.py  youtube.py
src/bubble/town/: Deepgram.py  fsys.py  test_town.py  test_town2.py  town.py  town2.py  uptime.py
src/bubble/youtube/: tool.py
src/proto/: cxx.capnp  dom.capnp  rpc.capnp  two-party-rpc.capnp
src/test/: data.ts
swash/: pyproject.toml
swash/src/swash/: __init__.py  desc.py  feed.py  here.py  html.py  json.py  lynx.py  mind.py  mint.py  prfx.py  rdf.py  rdfa.py  test_rdf.py  time.py  util.py  vars.py  word.py
test/: __init__.py  conftest.py  data.ts  html_test.ts  namespace.ts  reasoning_test.ts  request.ts  request_test.ts  rules_handler_test.ts  server_test.ts  test_capn.py  test_caps.py  test_cred.py  test_disk.py  test_html.py  test_json.py  test_macs.py  test_mind.py  test_mint.py  test_rdf.py  test_rdfa.py  test_repo.py  test_slop.py  test_stat.py  test_town.py  test_util.py  test_vars.py  utils.ts
test/data/: basic.n3
test/js/: rdfa_parser.js
tests/: test_n3.py
txt/: eye-builtins.ttl  eyereasoner.md  froth-serious.ttl  froth.ttl  n3-builtins.md  n3.md  oggopus.txt  pycapnp.md  scrabble4.json  tbl.ttl
txt/html/: prov-o.md
vocab/: audio.ttl  bubble.ttl  catalog-v001.xml  ext.ttl  iao.ttl  nt.ttl  ogg.ttl  rtc.ttl  voice.ttl  vox.ttl
