[project]
name = "bubble"
version = "0.1.0"
description = "Add your description here"
authors = []
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # Structured concurrency library for managing async code
    "trio==0.27.*",
    # Rich text and beautiful formatting in the terminal
    "rich==13.*",
    # Modern async HTTP client with support for HTTP/2
    "httpx==0.*",
    # Python library for working with RDF (Resource Description Framework)
    "rdflib==7.*",
    # Popular Python testing framework
    "pytest==8.*",
    # Pytest plugin for testing async code using Trio
    "pytest-trio==0.*",
    # Generates Markdown reports from pytest results
    "pytest-md-report==0.6.*",
    # Client library for Replicate's AI model hosting platform
    "replicate==1.*",
    # Official OpenAI API client for GPT models
    "openai==1.55.*",
    # Official Anthropic API client for Claude models
    "anthropic==0.39.*",
    # Globally unique ID generator
    "py-xid>=1.0.0",
    # Cross-platform unique machine ID generator
    "py-machineid>=0.6.0",
    # Modern CLI framework built on Click
    "typer>=0.13.1",
    # Static type checker for Python
    "pyright>=1.1.389",
    # Auto-rerun pytest on file changes
    "pytest-watcher>=0.4.3",
    # Cross-platform library for retrieving system information
    "psutil>=6.1.0",
    # Thin wrapper around the mock package for pytest
    "pytest-mock>=3.14.0",
    # Mocking and testing library
    "mock>=5.1.0",
    # Pytest plugin for mocking httpx requests
    "pytest-httpx>=0.34.0",
    "autopep8>=2.3.1",
    "coverage>=7.6.8",
    "starlette>=0.41.3",
    "fastapi>=0.115.5",
]

[tool.uv.sources]
# stay current with rdflib
rdflib = { git = "https://github.com/RDFLib/rdflib" }

# I don't remember but this was necessary at some point for something
httptools = { git = "https://github.com/tacaswell/httptools", branch = "patch-1" }

[build-system]
# I don't know why I have to choose this or what it does,
# but I'll make my best guess on how many releases until it breaks.
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# otherwise it complains about non-package directories
include = ["bubble"]

[project.scripts]
bubble = "bubble.main:main"

[tool.ruff]
line-length = 72         # slim fit
target-version = "py313" # I'm not interested in old Python versions

[tool.ruff.lint.isort]
# Use a single line between direct and from import.
lines-between-types = 1
length-sort = true

[tool.uv]
dev-dependencies = [
    "ruff==0.*",
    "pytest==8.*",
    "pytest-trio==0.*", # async testing for trio structured concurrency
]

python-preference = "managed"
python-downloads = "automatic"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
trio_mode = true
md_report = true
md_report_verbose = 1
mock_use_standalone_module = true
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
